# Crispr_guiderna

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  render.yaml  requirements.txt
results/: results.html
scraping/: scraper.py
static/: about.html  analysis.html  design.html  script.js  style.css
templates/: 404.html  design_results.html  index.html  results.html
