[tool.poetry]
name = "crisprguiderna"
version = "0.1.0"
description = ""
authors = ["Suvadip Ghara <suvadipgha20@gmail.com>"]
[tool.poetry.dependencies]
python = "^3.9"
flask = "==3.1.0"
gunicorn = "==21.2.0"
uvicorn = "==0.23.1"
selenium = "==4.27.1"
chromedriver-autoinstaller = "==0.6.4"
webdriver-manager = "==4.0.1"
pandas = "==2.2.0"
numpy = "==1.24.0"
beautifulsoup4 = "==4.12.0"
requests = "==2.31.0"
Werkzeug = "==3.1"
Jinja2 = "==3.1.2"
pytest = "==7.4.3"
pytest-selenium = "==4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"